syntax = "proto3";

package guff.proto;

service UsersService {
  rpc GetCurrentUser(GetCurrentUserRequest) returns (GetCurrentUserResponse) { }
}

message GetCurrentUserRequest {}

message GetCurrentUserResponse {
  string email = 1;
}

